--- a/src/main/resources/assets/mcversionrenamer/lang/en_us.json
+++ b/src/main/resources/assets/mcversionrenamer/lang/en_us.json
@@ -4,5 +4,11 @@
 
   "text.betterf3.module.versiontextchanger": "MCVersionRenamer Custom Version Text",
 
-  "text.config.mcversionrenamer-config.title": "MCVersionRenamer Config"
+  "text.config.mcversionrenamer-config.title": "MCVersionRenamer Config",
+
+  "text.config.mcversionrenamer-config.section.general-settings": "General Settings",
+  "text.config.mcversionrenamer-config.category.versionTextSettings": "Version Text Settings",
+  "text.config.mcversionrenamer-config.option.versionTextSettings.versionText": "Version Text",
+  "text.config.mcversionrenamer-config.option.versionTextSettings.titleText": "Title Text",
+  "text.config.mcversionrenamer-config.option.versionTextSettings.f3Text": "F3 Text"
 }
