(v1.0.4-SNAPSHOT) Added a config option to customize the splash text on the title screen. Revamped the version text config for better flexibility. Also fixed some bugs and cleaned up Gradle dependencies.

--- a/mcvr_1214/src/main/resources/assets/mcversionrenamer/lang/en_us.json
+++ b/mcvr_1214/src/main/resources/assets/mcversionrenamer/lang/en_us.json
@@ -1,3 +1,17 @@
 ﻿{
-  "modmenu.author_github": "Author's GitHub"
+  "key.mcversionrenamer.guiToggle": "MCVersionRenamer GUI Toggle Key",
+  "category.mcversionrenamer.default.name": "MCVersionRenamer",
+
+  "modmenu.author_github": "Author's GitHub",
+
+  "mcversionrenamer.color.red": "Red",
+  "mcversionrenamer.color.orange": "Orange",
+  "mcversionrenamer.color.yellow": "Yellow",
+  "mcversionrenamer.color.green": "Green",
+  "mcversionrenamer.color.aqua": "Aqua",
+  "mcversionrenamer.color.blue": "Blue",
+  "mcversionrenamer.color.purple": "Purple",
+  "mcversionrenamer.color.white": "White",
+  "mcversionrenamer.color.gray": "Gray",
+  "mcversionrenamer.color.black": "Black"
 }
